--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,80 @@
-/node_modules
-/public/css
-/public/js
-/public/*.html
-/storage/*.key
-/vendor
-/.idea
-Homestead.json
-Homestead.yaml
+node_modules/
+npm-debug.log
+packages/*/coverage
+packages/*/dist
+packages/*/node_modules
+npm-debug.log*
+packages/*/.env
+*.log
+*.cache
+yarn-error.log
+
+draft*
+.yarn
+.vercel
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage
+
+# nyc test coverage
+.nyc_output
+
+# Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
+.grunt
+
+# Bower dependency directory (https://bower.io/)
+bower_components
+
+# node-waf configuration
+.lock-wscript
+
+# Compiled binary addons (http://nodejs.org/api/addons.html)
+build/Release
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Typescript v1 declaration files
+typings/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# dotenv environment variables file
 .env
-studio.json
-composer.lock
+.env.*
+
+# Mac files
+.DS_Store
+
+# Yarn
+yarn-error.log
+.pnp/
+.pnp.js
+# Yarn Integrity file
+.yarn-integrity
+
+report.*
