--- a/package.json
+++ b/package.json
@@ -18,17 +18,19 @@
     "pkg": "manypkg run",
     "check:pkgs": "manypkg check",
     "fix:pkgs": "manypkg fix",
-    "version:pkgs": "changeset version",
-    "release": "changeset publish",
+    "release": "standard-version",
+    "release:minor": "standard-version --release-as minor",
+    "release:patch": "standard-version --release-as patch",
+    "release:major": "standard-version --release-as major",
     "docs": "yarn workspace @izn-resources/docs",
     "docs:start": "yarn docs start",
     "docs:build": "yarn docs build"
   },
   "dependencies": {
-    "@changesets/cli": "^2.16.0",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@manypkg/cli": "^0.17.0",
-    "husky": "^6.0.0"
+    "husky": "^6.0.0",
+    "standard-version": "^9.3.0"
   }
 }
